--- a/.github/workflows/build_and_test_release_latest.yml
+++ b/.github/workflows/build_and_test_release_latest.yml
@@ -16,8 +16,10 @@ jobs:
         include:
         - ros_distro: kinetic
           ubuntu_distro: xenial
+          extra_cmake_args: --cmake-target tests
         - ros_distro: melodic
           ubuntu_distro: bionic
+          extra_cmake_args: --cmake-target tests
     container:
       image: rostooling/setup-ros-docker:ubuntu-${{ matrix.ubuntu_distro }}-ros-${{ matrix.ros_distro }}-ros-base-latest
     env:
@@ -36,6 +38,7 @@ jobs:
       with:
         source-ros-binary-installation: ${{ matrix.ros_distro }}
         package-name: ros_monitoring_msgs
+        extra-cmake-args: ${{ matrix.extra_cmake_args }}
         # schedule runs against the default branch (master), so specify release-latest via repos file
         vcs-repo-file-url: "${{ github.workspace }}/.github/workflows/release_latest.repos"
     - name: Upload resulting colcon logs
